deleted some files and made some changes to the existing ones

--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#" target="_blank">Abdullah Ayoola</a>.
+        >. Coded by
+        <a
+          href="https://github.com/abdullah43577/social-proof-section"
+          target="_blank"
+          >Abdullah Ayoola</a
+        >.
       </div>
     </footer>
   </body>
